sdk/appcontainers/arm-appcontainers/samples/v4/typescript/README.md
# @azure/arm-appcontainers client library samples for TypeScript

These sample programs show how to use the TypeScript client libraries for @azure/arm-appcontainers in some common scenarios.

| **File Name**                                                                                                                           | **Description**                                                                                                                                                                      |
| --------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| [availableEnvironmentModesListSample.ts][availableenvironmentmodeslistsample]                                                           | gets the environment modes available to a subscription in a location. x-ms-original-file: 2026-07-01/AvailableEnvironmentModes_List.json                                             |
| [availableWorkloadProfilesListSample.ts][availableworkloadprofileslistsample]                                                           | get all available workload profiles for a location. x-ms-original-file: 2026-07-01/AvailableWorkloadProfiles_Get.json                                                                |
| [billingMetersGetSample.ts][billingmetersgetsample]                                                                                     | get all billingMeters for a location. x-ms-original-file: 2026-07-01/BillingMeters_Get.json                                                                                          |
| [certificatesCreateOrUpdateSample.ts][certificatescreateorupdatesample]                                                                 | create or Update a Certificate. x-ms-original-file: 2026-07-01/Certificate_CreateOrUpdate.json                                                                                       |
| [certificatesDeleteSample.ts][certificatesdeletesample]                                                                                 | deletes the specified Certificate. x-ms-original-file: 2026-07-01/Certificate_Delete.json                                                                                            |
| [certificatesGetSample.ts][certificatesgetsample]                                                                                       | get the specified Certificate. x-ms-original-file: 2026-07-01/Certificate_Get.json                                                                                                   |
| [certificatesListSample.ts][certificateslistsample]                                                                                     | get the Certificates in a given managed environment. x-ms-original-file: 2026-07-01/Certificates_ListByManagedEnvironment.json                                                       |
| [certificatesUpdateSample.ts][certificatesupdatesample]                                                                                 | patches a certificate. Currently only patching of tags is supported x-ms-original-file: 2026-07-01/Certificates_Patch.json                                                           |
| [connectedEnvironmentsCertificatesCreateOrUpdateSample.ts][connectedenvironmentscertificatescreateorupdatesample]                       | create or Update a Certificate. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificate_CreateOrUpdate.json                                                                  |
| [connectedEnvironmentsCertificatesDeleteSample.ts][connectedenvironmentscertificatesdeletesample]                                       | deletes the specified Certificate. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificate_Delete.json                                                                       |
| [connectedEnvironmentsCertificatesGetSample.ts][connectedenvironmentscertificatesgetsample]                                             | get the specified Certificate. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificate_Get.json                                                                              |
| [connectedEnvironmentsCertificatesListSample.ts][connectedenvironmentscertificateslistsample]                                           | get the Certificates in a given connected environment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificates_ListByConnectedEnvironment.json                              |
| [connectedEnvironmentsCertificatesUpdateSample.ts][connectedenvironmentscertificatesupdatesample]                                       | patches a certificate. Currently only patching of tags is supported x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificates_Patch.json                                      |
| [connectedEnvironmentsCheckNameAvailabilitySample.ts][connectedenvironmentschecknameavailabilitysample]                                 | checks if resource connectedEnvironmentName is available. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsCertificates_CheckNameAvailability.json                                |
| [connectedEnvironmentsCreateOrUpdateSample.ts][connectedenvironmentscreateorupdatesample]                                               | creates or updates an connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironments_CreateOrUpdate.json                                                                 |
| [connectedEnvironmentsDaprComponentsCreateOrUpdateSample.ts][connectedenvironmentsdaprcomponentscreateorupdatesample]                   | creates or updates a Dapr Component in a connected environment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsDaprComponents_CreateOrUpdate.json                               |
| [connectedEnvironmentsDaprComponentsDeleteSample.ts][connectedenvironmentsdaprcomponentsdeletesample]                                   | delete a Dapr Component from a connected environment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsDaprComponents_Delete.json                                                 |
| [connectedEnvironmentsDaprComponentsGetSample.ts][connectedenvironmentsdaprcomponentsgetsample]                                         | get a dapr component. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsDaprComponents_Get.json                                                                                    |
| [connectedEnvironmentsDaprComponentsListSample.ts][connectedenvironmentsdaprcomponentslistsample]                                       | get the Dapr Components for a connected environment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsDaprComponents_List.json                                                    |
| [connectedEnvironmentsDaprComponentsListSecretsSample.ts][connectedenvironmentsdaprcomponentslistsecretssample]                         | list secrets for a dapr component x-ms-original-file: 2026-07-01/ConnectedEnvironmentsDaprComponents_ListSecrets.json                                                                |
| [connectedEnvironmentsDeleteSample.ts][connectedenvironmentsdeletesample]                                                               | delete an connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironments_Delete.json                                                                                     |
| [connectedEnvironmentsGetSample.ts][connectedenvironmentsgetsample]                                                                     | get the properties of an connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironments_Get.json                                                                         |
| [connectedEnvironmentsListByResourceGroupSample.ts][connectedenvironmentslistbyresourcegroupsample]                                     | get all connectedEnvironments in a resource group. x-ms-original-file: 2026-07-01/ConnectedEnvironments_ListByResourceGroup.json                                                     |
| [connectedEnvironmentsListBySubscriptionSample.ts][connectedenvironmentslistbysubscriptionsample]                                       | get all connectedEnvironments for a subscription. x-ms-original-file: 2026-07-01/ConnectedEnvironments_ListBySubscription.json                                                       |
| [connectedEnvironmentsStoragesCreateOrUpdateSample.ts][connectedenvironmentsstoragescreateorupdatesample]                               | create or update storage for a connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsStorages_CreateOrUpdate.json                                                |
| [connectedEnvironmentsStoragesDeleteSample.ts][connectedenvironmentsstoragesdeletesample]                                               | delete storage for a connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsStorages_Delete.json                                                                  |
| [connectedEnvironmentsStoragesGetSample.ts][connectedenvironmentsstoragesgetsample]                                                     | get storage for a connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsStorages_Get.json                                                                        |
| [connectedEnvironmentsStoragesListSample.ts][connectedenvironmentsstorageslistsample]                                                   | get all storages for a connectedEnvironment. x-ms-original-file: 2026-07-01/ConnectedEnvironmentsStorages_List.json                                                                  |
| [connectedEnvironmentsUpdateSample.ts][connectedenvironmentsupdatesample]                                                               | patches a Managed Environment. Only patching of tags is supported currently x-ms-original-file: 2026-07-01/ConnectedEnvironments_Patch.json                                          |
| [containerAppPrivateEndpointConnectionsCreateOrUpdateSample.ts][containerappprivateendpointconnectionscreateorupdatesample]             | creates a private endpoint connection or updates its connection state for a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateEndpointConnections_CreateOrUpdate.json |
| [containerAppPrivateEndpointConnectionsDeleteSample.ts][containerappprivateendpointconnectionsdeletesample]                             | deletes the specified private endpoint connection associated with a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateEndpointConnections_Delete.json                 |
| [containerAppPrivateEndpointConnectionsGetSample.ts][containerappprivateendpointconnectionsgetsample]                                   | gets the details of a private endpoint connection associated with a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateEndpointConnections_Get.json                    |
| [containerAppPrivateEndpointConnectionsListSample.ts][containerappprivateendpointconnectionslistsample]                                 | lists all private endpoint connections associated with a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateEndpointConnections_List.json                              |
| [containerAppPrivateLinkResourcesGetSample.ts][containerappprivatelinkresourcesgetsample]                                               | gets the details of a private link resource supported by a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateLinkResources_Get.json                                   |
| [containerAppPrivateLinkResourcesListSample.ts][containerappprivatelinkresourceslistsample]                                             | lists the private link resources supported by a Container App. x-ms-original-file: 2026-07-01/ContainerAppPrivateLinkResources_List.json                                             |
| [containerAppsAuthConfigsCreateOrUpdateSample.ts][containerappsauthconfigscreateorupdatesample]                                         | create or update the AuthConfig for a Container App. x-ms-original-file: 2026-07-01/AuthConfigs_BlobStorageTokenStore_ClientId_CreateOrUpdate.json                                   |
| [containerAppsAuthConfigsDeleteSample.ts][containerappsauthconfigsdeletesample]                                                         | delete a Container App AuthConfig. x-ms-original-file: 2026-07-01/AuthConfigs_Delete.json                                                                                            |
| [containerAppsAuthConfigsGetSample.ts][containerappsauthconfigsgetsample]                                                               | get a AuthConfig of a Container App. x-ms-original-file: 2026-07-01/AuthConfigs_Get.json                                                                                             |
| [containerAppsAuthConfigsListByContainerAppSample.ts][containerappsauthconfigslistbycontainerappsample]                                 | get the Container App AuthConfigs in a given resource group. x-ms-original-file: 2026-07-01/AuthConfigs_ListByContainer.json                                                         |
| [containerAppsCreateOrUpdateSample.ts][containerappscreateorupdatesample]                                                               | create or update a Container App. x-ms-original-file: 2026-07-01/ContainerApps_CreateOrUpdate.json                                                                                   |
| [containerAppsDeleteSample.ts][containerappsdeletesample]                                                                               | delete a Container App. x-ms-original-file: 2026-07-01/ContainerApps_Delete.json                                                                                                     |
| [containerAppsDiagnosticsGetDetectorSample.ts][containerappsdiagnosticsgetdetectorsample]                                               | get a diagnostics result of a Container App. x-ms-original-file: 2026-07-01/ContainerAppsDiagnostics_Get.json                                                                        |
| [containerAppsDiagnosticsGetRevisionSample.ts][containerappsdiagnosticsgetrevisionsample]                                               | get a revision of a Container App. x-ms-original-file: 2026-07-01/Revisions_Get1.json                                                                                                |
| [containerAppsDiagnosticsGetRootSample.ts][containerappsdiagnosticsgetrootsample]                                                       | get the properties of a Container App. x-ms-original-file: 2026-07-01/ContainerApps_Get1.json                                                                                        |
| [containerAppsDiagnosticsListDetectorsSample.ts][containerappsdiagnosticslistdetectorssample]                                           | get the list of diagnostics for a given Container App. x-ms-original-file: 2026-07-01/ContainerAppsDiagnostics_List.json                                                             |
| [containerAppsDiagnosticsListRevisionsSample.ts][containerappsdiagnosticslistrevisionssample]                                           | a synchronous resource action. x-ms-original-file: 2026-07-01/Revisions_List1.json                                                                                                   |
| [containerAppsFunctionsGetSample.ts][containerappsfunctionsgetsample]                                                                   | gets the details of a specific function from the latest Container App revision. x-ms-original-file: 2026-07-01/ContainerAppsFunctions_Get.json                                       |
| [containerAppsFunctionsListSample.ts][containerappsfunctionslistsample]                                                                 | lists the functions available in the latest revision of a Container App. x-ms-original-file: 2026-07-01/ContainerAppsFunctions_List.json                                             |
| [containerAppsGetAuthTokenSample.ts][containerappsgetauthtokensample]                                                                   | get auth token for a container app x-ms-original-file: 2026-07-01/ContainerApps_GetAuthToken.json                                                                                    |
| [containerAppsGetSample.ts][containerappsgetsample]                                                                                     | get the properties of a Container App. x-ms-original-file: 2026-07-01/ContainerApps_Get.json                                                                                         |
| [containerAppsLabelHistoryDeleteLabelHistorySample.ts][containerappslabelhistorydeletelabelhistorysample]                               | deletes the revision history associated with a Container App label. x-ms-original-file: 2026-07-01/LabelHistory_Delete.json                                                          |
| [containerAppsLabelHistoryGetLabelHistorySample.ts][containerappslabelhistorygetlabelhistorysample]                                     | gets the revision history associated with a Container App label. x-ms-original-file: 2026-07-01/LabelHistory_Get.json                                                                |
| [containerAppsLabelHistoryListLabelHistorySample.ts][containerappslabelhistorylistlabelhistorysample]                                   | lists the label revision histories for a Container App. x-ms-original-file: 2026-07-01/LabelHistory_List.json                                                                        |
| [containerAppsListByResourceGroupSample.ts][containerappslistbyresourcegroupsample]                                                     | get the Container Apps in a given resource group. x-ms-original-file: 2026-07-01/ContainerApps_ListByResourceGroup.json                                                              |
| [containerAppsListBySubscriptionSample.ts][containerappslistbysubscriptionsample]                                                       | get the Container Apps in a given subscription. x-ms-original-file: 2026-07-01/ContainerApps_ListBySubscription.json                                                                 |
| [containerAppsListCustomHostNameAnalysisSample.ts][containerappslistcustomhostnameanalysissample]                                       | analyzes a custom hostname for a Container App x-ms-original-file: 2026-07-01/ContainerApps_ListCustomHostNameAnalysis.json                                                          |
| [containerAppsListSecretsSample.ts][containerappslistsecretssample]                                                                     | list secrets for a container app x-ms-original-file: 2026-07-01/ContainerApps_ListSecrets.json                                                                                       |
| [containerAppsRevisionFunctionsGetSample.ts][containerappsrevisionfunctionsgetsample]                                                   | gets the details of a specific function in a Container App revision. x-ms-original-file: 2026-07-01/ContainerAppsRevisionFunctions_Get.json                                          |
| [containerAppsRevisionFunctionsListSample.ts][containerappsrevisionfunctionslistsample]                                                 | lists the functions available in a specific Container App revision. x-ms-original-file: 2026-07-01/ContainerAppsRevisionFunctions_List.json                                          |
| [containerAppsRevisionReplicasGetReplicaSample.ts][containerappsrevisionreplicasgetreplicasample]                                       | get a replica for a Container App Revision. x-ms-original-file: 2026-07-01/Replicas_Get.json                                                                                         |
| [containerAppsRevisionReplicasListReplicasSample.ts][containerappsrevisionreplicaslistreplicassample]                                   | list replicas for a Container App Revision. x-ms-original-file: 2026-07-01/Replicas_List.json                                                                                        |
| [containerAppsRevisionsActivateRevisionSample.ts][containerappsrevisionsactivaterevisionsample]                                         | activates a revision for a Container App x-ms-original-file: 2026-07-01/Revisions_Activate.json                                                                                      |
| [containerAppsRevisionsDeactivateRevisionSample.ts][containerappsrevisionsdeactivaterevisionsample]                                     | deactivates a revision for a Container App x-ms-original-file: 2026-07-01/Revisions_Deactivate.json                                                                                  |
| [containerAppsRevisionsGetRevisionSample.ts][containerappsrevisionsgetrevisionsample]                                                   | get a revision of a Container App. x-ms-original-file: 2026-07-01/Revisions_Get.json                                                                                                 |
| [containerAppsRevisionsListRevisionsSample.ts][containerappsrevisionslistrevisionssample]                                               | get the Revisions for a given Container App. x-ms-original-file: 2026-07-01/Revisions_List.json                                                                                      |
| [containerAppsRevisionsRestartRevisionSample.ts][containerappsrevisionsrestartrevisionsample]                                           | restarts a revision for a Container App x-ms-original-file: 2026-07-01/Revisions_Restart.json                                                                                        |
| [containerAppsSessionPoolsCreateOrUpdateSample.ts][containerappssessionpoolscreateorupdatesample]                                       | create or update a session pool with the given properties. x-ms-original-file: 2026-07-01/SessionPools_LifecycleOnContainerExit_CreateOrUpdate.json                                  |
| [containerAppsSessionPoolsDeleteSample.ts][containerappssessionpoolsdeletesample]                                                       | delete the session pool with the given name. x-ms-original-file: 2026-07-01/SessionPools_Delete.json                                                                                 |
| [containerAppsSessionPoolsGetSample.ts][containerappssessionpoolsgetsample]                                                             | get the properties of a session pool. x-ms-original-file: 2026-07-01/SessionPools_Get.json                                                                                           |
| [containerAppsSessionPoolsListByResourceGroupSample.ts][containerappssessionpoolslistbyresourcegroupsample]                             | get the session pools in a given resource group of a subscription. x-ms-original-file: 2026-07-01/SessionPools_ListByResourceGroup.json                                              |
| [containerAppsSessionPoolsListBySubscriptionSample.ts][containerappssessionpoolslistbysubscriptionsample]                               | get the session pools in a given subscription. x-ms-original-file: 2026-07-01/SessionPools_ListBySubscription.json                                                                   |
| [containerAppsSessionPoolsUpdateSample.ts][containerappssessionpoolsupdatesample]                                                       | patches a session pool using JSON merge patch x-ms-original-file: 2026-07-01/SessionPools_Patch.json                                                                                 |
| [containerAppsSourceControlsCreateOrUpdateSample.ts][containerappssourcecontrolscreateorupdatesample]                                   | create or update the SourceControl for a Container App. x-ms-original-file: 2026-07-01/SourceControls_CreateOrUpdate.json                                                            |
| [containerAppsSourceControlsDeleteSample.ts][containerappssourcecontrolsdeletesample]                                                   | delete a Container App SourceControl. x-ms-original-file: 2026-07-01/SourceControls_Delete.json                                                                                      |
| [containerAppsSourceControlsGetSample.ts][containerappssourcecontrolsgetsample]                                                         | get a SourceControl of a Container App. x-ms-original-file: 2026-07-01/SourceControls_Get.json                                                                                       |
| [containerAppsSourceControlsListByContainerAppSample.ts][containerappssourcecontrolslistbycontainerappsample]                           | get the Container App SourceControls in a given resource group. x-ms-original-file: 2026-07-01/SourceControls_ListByContainer.json                                                   |
| [containerAppsStartSample.ts][containerappsstartsample]                                                                                 | start a container app x-ms-original-file: 2026-07-01/ContainerApps_Start.json                                                                                                        |
| [containerAppsStopSample.ts][containerappsstopsample]                                                                                   | stop a container app x-ms-original-file: 2026-07-01/ContainerApps_Stop.json                                                                                                          |
| [containerAppsUpdateSample.ts][containerappsupdatesample]                                                                               | patches a Container App using JSON Merge Patch x-ms-original-file: 2026-07-01/ContainerApps_Patch.json                                                                               |
| [daprComponentResiliencyPoliciesCreateOrUpdateSample.ts][daprcomponentresiliencypoliciescreateorupdatesample]                           | creates or updates a resiliency policy for a Dapr component. x-ms-original-file: 2026-07-01/DaprComponentResiliencyPolicy_CreateOrUpdate_AllOptions.json                             |
| [daprComponentResiliencyPoliciesDeleteSample.ts][daprcomponentresiliencypoliciesdeletesample]                                           | delete a resiliency policy for a Dapr component. x-ms-original-file: 2026-07-01/DaprComponentResiliencyPolicies_Delete.json                                                          |
| [daprComponentResiliencyPoliciesGetSample.ts][daprcomponentresiliencypoliciesgetsample]                                                 | gets the details of a resiliency policy for a Dapr component. x-ms-original-file: 2026-07-01/DaprComponentResiliencyPolicies_Get.json                                                |
| [daprComponentResiliencyPoliciesListSample.ts][daprcomponentresiliencypolicieslistsample]                                               | lists the resiliency policies configured for a Dapr component. x-ms-original-file: 2026-07-01/DaprComponentResiliencyPolicies_List.json                                              |
| [daprComponentsCreateOrUpdateSample.ts][daprcomponentscreateorupdatesample]                                                             | creates or updates a Dapr Component in a Managed Environment. x-ms-original-file: 2026-07-01/DaprComponents_CreateOrUpdate_SecretStoreComponent.json                                 |
| [daprComponentsDeleteSample.ts][daprcomponentsdeletesample]                                                                             | delete a Dapr Component from a Managed Environment. x-ms-original-file: 2026-07-01/DaprComponents_Delete.json                                                                        |
| [daprComponentsGetSample.ts][daprcomponentsgetsample]                                                                                   | get a dapr component. x-ms-original-file: 2026-07-01/DaprComponents_Get_SecretStoreComponent.json                                                                                    |
| [daprComponentsListSample.ts][daprcomponentslistsample]                                                                                 | get the Dapr Components for a managed environment. x-ms-original-file: 2026-07-01/DaprComponents_List.json                                                                           |
| [daprComponentsListSecretsSample.ts][daprcomponentslistsecretssample]                                                                   | list secrets for a dapr component x-ms-original-file: 2026-07-01/DaprComponents_ListSecrets.json                                                                                     |
| [dotNetComponentsCreateOrUpdateSample.ts][dotnetcomponentscreateorupdatesample]                                                         | creates or updates a .NET Component in a Managed Environment. x-ms-original-file: 2026-07-01/DotNetComponents_CreateOrUpdate.json                                                    |
| [dotNetComponentsDeleteSample.ts][dotnetcomponentsdeletesample]                                                                         | deletes a .NET component from a managed environment. x-ms-original-file: 2026-07-01/DotNetComponents_Delete.json                                                                     |
| [dotNetComponentsGetSample.ts][dotnetcomponentsgetsample]                                                                               | gets the details of a .NET component in a managed environment. x-ms-original-file: 2026-07-01/DotNetComponents_Get.json                                                              |
| [dotNetComponentsListSample.ts][dotnetcomponentslistsample]                                                                             | lists the .NET components in a managed environment. x-ms-original-file: 2026-07-01/DotNetComponents_List.json                                                                        |
| [dotNetComponentsUpdateSample.ts][dotnetcomponentsupdatesample]                                                                         | patches a .NET Component using JSON Merge Patch x-ms-original-file: 2026-07-01/DotNetComponents_Patch.json                                                                           |
| [functionsExtensionInvokeFunctionsHostSample.ts][functionsextensioninvokefunctionshostsample]                                           | proxies a Functions host call to the function app backed by the container app. x-ms-original-file: 2026-07-01/FunctionsExtension_Post.json                                           |
| [getCustomDomainVerificationIdSample.ts][getcustomdomainverificationidsample]                                                           | get the verification id of a subscription used for verifying custom domains x-ms-original-file: 2026-07-01/Subscriptions_GetCustomDomainVerificationId.json                          |
| [httpRouteConfigCreateOrUpdateSample.ts][httprouteconfigcreateorupdatesample]                                                           | create or Update a Http Route Config. x-ms-original-file: 2026-07-01/HttpRouteConfig_CreateOrUpdate.json                                                                             |
| [httpRouteConfigDeleteSample.ts][httprouteconfigdeletesample]                                                                           | deletes the specified Managed Http Route. x-ms-original-file: 2026-07-01/HttpRouteConfig_Delete.json                                                                                 |
| [httpRouteConfigGetSample.ts][httprouteconfiggetsample]                                                                                 | get the specified Managed Http Route Config. x-ms-original-file: 2026-07-01/HttpRouteConfig_Get.json                                                                                 |
| [httpRouteConfigListSample.ts][httprouteconfiglistsample]                                                                               | get the Managed Http Routes in a given managed environment. x-ms-original-file: 2026-07-01/HttpRouteConfig_ListByManagedEnvironment.json                                             |
| [httpRouteConfigUpdateSample.ts][httprouteconfigupdatesample]                                                                           | patches an http route config resource. Only patching of tags is supported x-ms-original-file: 2026-07-01/HttpRouteConfig_Patch.json                                                  |
| [javaComponentsCreateOrUpdateSample.ts][javacomponentscreateorupdatesample]                                                             | creates or updates a Java Component in a Managed Environment. x-ms-original-file: 2026-07-01/JavaComponents_CreateOrUpdate.json                                                      |
| [javaComponentsDeleteSample.ts][javacomponentsdeletesample]                                                                             | delete a Java Component. x-ms-original-file: 2026-07-01/JavaComponents_Delete.json                                                                                                   |
| [javaComponentsGetSample.ts][javacomponentsgetsample]                                                                                   | get a Java Component. x-ms-original-file: 2026-07-01/JavaComponents_Get.json                                                                                                         |
| [javaComponentsListSample.ts][javacomponentslistsample]                                                                                 | get the Java Components for a managed environment. x-ms-original-file: 2026-07-01/JavaComponents_List.json                                                                           |
| [javaComponentsUpdateSample.ts][javacomponentsupdatesample]                                                                             | patches a Java Component using JSON Merge Patch x-ms-original-file: 2026-07-01/JavaComponents_Patch.json                                                                             |
| [jobExecutionSample.ts][jobexecutionsample]                                                                                             | get details of a single job execution x-ms-original-file: 2026-07-01/Job_Execution_Get.json                                                                                          |
| [jobsCreateOrUpdateSample.ts][jobscreateorupdatesample]                                                                                 | create or Update a Container Apps Job. x-ms-original-file: 2026-07-01/Job_CreateorUpdate.json                                                                                        |
| [jobsDeleteSample.ts][jobsdeletesample]                                                                                                 | delete a Container Apps Job. x-ms-original-file: 2026-07-01/Job_Delete.json                                                                                                          |
| [jobsExecutionsListSample.ts][jobsexecutionslistsample]                                                                                 | get a Container Apps Job's executions x-ms-original-file: 2026-07-01/Job_Executions_Get.json                                                                                         |
| [jobsGetDetectorSample.ts][jobsgetdetectorsample]                                                                                       | get the diagnostics data for a Container App Job. x-ms-original-file: 2026-07-01/Job_GetDetector.json                                                                                |
| [jobsGetSample.ts][jobsgetsample]                                                                                                       | get the properties of a Container Apps Job. x-ms-original-file: 2026-07-01/Job_Get.json                                                                                              |
| [jobsListByResourceGroupSample.ts][jobslistbyresourcegroupsample]                                                                       | get the Container Apps Jobs in a given resource group. x-ms-original-file: 2026-07-01/Jobs_ListByResourceGroup.json                                                                  |
| [jobsListBySubscriptionSample.ts][jobslistbysubscriptionsample]                                                                         | get the Container Apps Jobs in a given subscription. x-ms-original-file: 2026-07-01/Jobs_ListBySubscription.json                                                                     |
| [jobsListDetectorsSample.ts][jobslistdetectorssample]                                                                                   | get the list of diagnostics for a Container App Job. x-ms-original-file: 2026-07-01/Job_ListDetectors.json                                                                           |
| [jobsListSecretsSample.ts][jobslistsecretssample]                                                                                       | list secrets for a container apps job x-ms-original-file: 2026-07-01/Job_ListSecrets.json                                                                                            |
| [jobsProxyGetSample.ts][jobsproxygetsample]                                                                                             | get the properties for a given Container App Job. x-ms-original-file: 2026-07-01/Job_ProxyGet.json                                                                                   |
| [jobsResumeSample.ts][jobsresumesample]                                                                                                 | resumes execution for a suspended Container Apps job. x-ms-original-file: 2026-07-01/Jobs_Resume.json                                                                                |
| [jobsStartSample.ts][jobsstartsample]                                                                                                   | start a Container Apps Job x-ms-original-file: 2026-07-01/Job_Start.json                                                                                                             |
| [jobsStopExecutionSample.ts][jobsstopexecutionsample]                                                                                   | terminates execution of a running container apps job x-ms-original-file: 2026-07-01/Job_Stop_Execution.json                                                                          |
| [jobsStopMultipleExecutionsSample.ts][jobsstopmultipleexecutionssample]                                                                 | terminates execution of a running container apps job x-ms-original-file: 2026-07-01/Job_Stop_Multiple.json                                                                           |
| [jobsSuspendSample.ts][jobssuspendsample]                                                                                               | suspends execution for a running Container Apps job. x-ms-original-file: 2026-07-01/Jobs_Suspend.json                                                                                |
| [jobsUpdateSample.ts][jobsupdatesample]                                                                                                 | patches a Container Apps Job using JSON Merge Patch x-ms-original-file: 2026-07-01/Job_Patch.json                                                                                    |
| [logicAppsCreateOrUpdateSample.ts][logicappscreateorupdatesample]                                                                       | create or update a Logic App extension resource x-ms-original-file: 2026-07-01/LogicApps_Create.json                                                                                 |
| [logicAppsDeleteSample.ts][logicappsdeletesample]                                                                                       | deletes a Logic App extension resource x-ms-original-file: 2026-07-01/LogicApps_Delete.json                                                                                          |
| [logicAppsGetSample.ts][logicappsgetsample]                                                                                             | gets a logic app extension resource. x-ms-original-file: 2026-07-01/LogicApps_Get.json                                                                                               |
| [logicAppsGetWorkflowSample.ts][logicappsgetworkflowsample]                                                                             | get workflow information by its name x-ms-original-file: 2026-07-01/LogicApps_GetWorkflow.json                                                                                       |
| [logicAppsListWorkflowsConnectionsSample.ts][logicappslistworkflowsconnectionssample]                                                   | gets logic app's connections. x-ms-original-file: 2026-07-01/LogicApps_ListConnections.json                                                                                          |
| [logicAppsListWorkflowsSample.ts][logicappslistworkflowssample]                                                                         | list the workflows for a logic app. x-ms-original-file: 2026-07-01/LogicApps_ListWorkflows.json                                                                                      |
| [maintenanceConfigurationsCreateOrUpdateSample.ts][maintenanceconfigurationscreateorupdatesample]                                       | create or update the maintenance configuration for Managed Environment. x-ms-original-file: 2026-07-01/ManagedEnvironment_MaintenanceConfigurations_CreateOrUpdate.json              |
| [maintenanceConfigurationsDeleteSample.ts][maintenanceconfigurationsdeletesample]                                                       | deletes the maintenance configuration of a ManagedEnvironment . x-ms-original-file: 2026-07-01/ManagedEnvironment_MaintenanceConfigurations_Delete.json                              |
| [maintenanceConfigurationsGetSample.ts][maintenanceconfigurationsgetsample]                                                             | gets the maintenance configuration of a ManagedEnvironment . x-ms-original-file: 2026-07-01/ManagedEnvironment_MaintenanceConfigurations_Get.json                                    |
| [maintenanceConfigurationsListSample.ts][maintenanceconfigurationslistsample]                                                           | gets all maintenance configurations in the specified Managed Environment. x-ms-original-file: 2026-07-01/ManagedEnvironment_MaintenanceConfigurations_List.json                      |
| [managedCertificatesCreateOrUpdateSample.ts][managedcertificatescreateorupdatesample]                                                   | create or Update a Managed Certificate. x-ms-original-file: 2026-07-01/ManagedCertificate_CreateOrUpdate.json                                                                        |
| [managedCertificatesDeleteSample.ts][managedcertificatesdeletesample]                                                                   | deletes the specified Managed Certificate. x-ms-original-file: 2026-07-01/ManagedCertificate_Delete.json                                                                             |
| [managedCertificatesGetSample.ts][managedcertificatesgetsample]                                                                         | get the specified Managed Certificate. x-ms-original-file: 2026-07-01/ManagedCertificate_Get.json                                                                                    |
| [managedCertificatesListSample.ts][managedcertificateslistsample]                                                                       | get the Managed Certificates in a given managed environment. x-ms-original-file: 2026-07-01/ManagedCertificates_ListByManagedEnvironment.json                                        |
| [managedCertificatesUpdateSample.ts][managedcertificatesupdatesample]                                                                   | patches a managed certificate. Oly patching of tags is supported x-ms-original-file: 2026-07-01/ManagedCertificates_Patch.json                                                       |
| [managedEnvironmentDiagnosticsGetDetectorSample.ts][managedenvironmentdiagnosticsgetdetectorsample]                                     | get the diagnostics data for a Managed Environment used to host container apps. x-ms-original-file: 2026-07-01/ManagedEnvironmentDiagnostics_Get.json                                |
| [managedEnvironmentDiagnosticsListDetectorsSample.ts][managedenvironmentdiagnosticslistdetectorssample]                                 | get the list of diagnostics for a Managed Environment used to host container apps. x-ms-original-file: 2026-07-01/ManagedEnvironmentDiagnostics_List.json                            |
| [managedEnvironmentPrivateEndpointConnectionsCreateOrUpdateSample.ts][managedenvironmentprivateendpointconnectionscreateorupdatesample] | update the state of a private endpoint connection for a given managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateEndpointConnections_CreateOrUpdate.json   |
| [managedEnvironmentPrivateEndpointConnectionsDeleteSample.ts][managedenvironmentprivateendpointconnectionsdeletesample]                 | delete a private endpoint connection for a given managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateEndpointConnections_Delete.json                        |
| [managedEnvironmentPrivateEndpointConnectionsGetSample.ts][managedenvironmentprivateendpointconnectionsgetsample]                       | get a private endpoint connection for a given managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateEndpointConnections_Get.json                              |
| [managedEnvironmentPrivateEndpointConnectionsListSample.ts][managedenvironmentprivateendpointconnectionslistsample]                     | list private endpoint connections for a given managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateEndpointConnections_List.json                             |
| [managedEnvironmentPrivateLinkResourcesGetSample.ts][managedenvironmentprivatelinkresourcesgetsample]                                   | gets the details of a private link resource supported by a managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateLinkResources_Get.json                       |
| [managedEnvironmentPrivateLinkResourcesListSample.ts][managedenvironmentprivatelinkresourceslistsample]                                 | list private link resources for a given managed environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentPrivateLinkResources_List.json                                         |
| [managedEnvironmentUsagesListSample.ts][managedenvironmentusageslistsample]                                                             | gets the current usage information as well as the limits for environment. x-ms-original-file: 2026-07-01/ManagedEnvironmentUsages_List.json                                          |
| [managedEnvironmentsCheckMigrationEligibilitySample.ts][managedenvironmentscheckmigrationeligibilitysample]                             | checks whether a Managed Environment can be migrated to a target mode. x-ms-original-file: 2026-07-01/ManagedEnvironments_CheckMigrationEligibility.json                             |
| [managedEnvironmentsCreateOrUpdateSample.ts][managedenvironmentscreateorupdatesample]                                                   | creates or updates a Managed Environment used to host container apps. x-ms-original-file: 2026-07-01/ManagedEnvironments_CreateOrUpdate.json                                         |
| [managedEnvironmentsDeleteSample.ts][managedenvironmentsdeletesample]                                                                   | delete a Managed Environment if it does not have any container apps. x-ms-original-file: 2026-07-01/ManagedEnvironments_Delete.json                                                  |
| [managedEnvironmentsDiagnosticsGetRootSample.ts][managedenvironmentsdiagnosticsgetrootsample]                                           | get the properties of a Managed Environment used to host container apps. x-ms-original-file: 2026-07-01/ManagedEnvironments_Get1.json                                                |
| [managedEnvironmentsGetAuthTokenSample.ts][managedenvironmentsgetauthtokensample]                                                       | checks if resource name is available. x-ms-original-file: 2026-07-01/ManagedEnvironments_GetAuthToken.json                                                                           |
| [managedEnvironmentsGetSample.ts][managedenvironmentsgetsample]                                                                         | get the properties of a Managed Environment used to host container apps. x-ms-original-file: 2026-07-01/ManagedEnvironments_Get.json                                                 |
| [managedEnvironmentsListByResourceGroupSample.ts][managedenvironmentslistbyresourcegroupsample]                                         | get all the Managed Environments in a resource group. x-ms-original-file: 2026-07-01/ManagedEnvironments_ListByResourceGroup.json                                                    |
| [managedEnvironmentsListBySubscriptionSample.ts][managedenvironmentslistbysubscriptionsample]                                           | get all Managed Environments for a subscription. x-ms-original-file: 2026-07-01/ManagedEnvironments_ListBySubscription.json                                                          |
| [managedEnvironmentsListWorkloadProfileStatesSample.ts][managedenvironmentslistworkloadprofilestatessample]                             | get all workload Profile States for a Managed Environment. x-ms-original-file: 2026-07-01/ManagedEnvironments_ListWorkloadProfileStates.json                                         |
| [managedEnvironmentsStoragesCreateOrUpdateSample.ts][managedenvironmentsstoragescreateorupdatesample]                                   | create or update storage for a managedEnvironment. x-ms-original-file: 2026-07-01/ManagedEnvironmentsStorages_CreateOrUpdate.json                                                    |
| [managedEnvironmentsStoragesDeleteSample.ts][managedenvironmentsstoragesdeletesample]                                                   | delete storage for a managedEnvironment. x-ms-original-file: 2026-07-01/ManagedEnvironmentsStorages_Delete.json                                                                      |
| [managedEnvironmentsStoragesGetSample.ts][managedenvironmentsstoragesgetsample]                                                         | get storage for a managedEnvironment. x-ms-original-file: 2026-07-01/ManagedEnvironmentsStorages_Get.json                                                                            |
| [managedEnvironmentsStoragesListSample.ts][managedenvironmentsstorageslistsample]                                                       | get all storages for a managedEnvironment. x-ms-original-file: 2026-07-01/ManagedEnvironmentsStorages_List.json                                                                      |
| [managedEnvironmentsUpdateSample.ts][managedenvironmentsupdatesample]                                                                   | patches a Managed Environment using JSON Merge Patch x-ms-original-file: 2026-07-01/ManagedEnvironments_Patch.json                                                                   |
| [namespacesCheckNameAvailabilitySample.ts][namespaceschecknameavailabilitysample]                                                       | checks if resource name is available. x-ms-original-file: 2026-07-01/Certificates_CheckNameAvailability.json                                                                         |
| [operationsListSample.ts][operationslistsample]                                                                                         | lists all of the available RP operations. x-ms-original-file: 2026-07-01/Operations_List.json                                                                                        |
| [sandboxGroupsCreateOrUpdateSample.ts][sandboxgroupscreateorupdatesample]                                                               | create or update a SandboxGroup. x-ms-original-file: 2026-07-01/SandboxGroups_CreateOrUpdate.json                                                                                    |
| [sandboxGroupsDeleteSample.ts][sandboxgroupsdeletesample]                                                                               | delete a SandboxGroup. x-ms-original-file: 2026-07-01/SandboxGroups_Delete.json                                                                                                      |
| [sandboxGroupsGetSample.ts][sandboxgroupsgetsample]                                                                                     | get the properties of a SandboxGroup. x-ms-original-file: 2026-07-01/SandboxGroups_Get.json                                                                                          |
| [sandboxGroupsListByResourceGroupSample.ts][sandboxgroupslistbyresourcegroupsample]                                                     | get all SandboxGroups in a resource group. x-ms-original-file: 2026-07-01/SandboxGroups_ListByResourceGroup.json                                                                     |
| [sandboxGroupsListBySubscriptionSample.ts][sandboxgroupslistbysubscriptionsample]                                                       | get all SandboxGroups for a subscription. x-ms-original-file: 2026-07-01/SandboxGroups_ListBySubscription.json                                                                       |
| [sandboxGroupsUpdateSample.ts][sandboxgroupsupdatesample]                                                                               | patches a SandboxGroup. x-ms-original-file: 2026-07-01/SandboxGroups_Update.json                                                                                                     |
| [usagesListSample.ts][usageslistsample]                                                                                                 | gets, for the specified location, the current resource usage information as well as the limits under the subscription. x-ms-original-file: 2026-07-01/Usages_List.json               |
| [vnetConnectionsCreateOrUpdateSample.ts][vnetconnectionscreateorupdatesample]                                                           | create or update a VnetConnection. x-ms-original-file: 2026-07-01/VnetConnections_CreateOrUpdate.json                                                                                |
| [vnetConnectionsDeleteSample.ts][vnetconnectionsdeletesample]                                                                           | delete a VnetConnection. x-ms-original-file: 2026-07-01/VnetConnections_Delete.json                                                                                                  |
| [vnetConnectionsGetSample.ts][vnetconnectionsgetsample]                                                                                 | get the properties of a VnetConnection. x-ms-original-file: 2026-07-01/VnetConnections_Get.json                                                                                      |
| [vnetConnectionsListBySandboxGroupSample.ts][vnetconnectionslistbysandboxgroupsample]                                                   | list all VnetConnections in the specified SandboxGroup. x-ms-original-file: 2026-07-01/VnetConnections_ListBySandboxGroup.json                                                       |

## Prerequisites

The sample programs are compatible with [LTS versions of Node.js](https://github.com/nodejs/release#release-schedule).

Before running the samples in Node, they must be compiled to JavaScript using the TypeScript compiler. For more information on TypeScript, see the [TypeScript documentation][typescript]. Install the TypeScript compiler using:

```bash
npm install -g typescript
```

You need [an Azure subscription][freesub] to run these sample programs.

Samples retrieve credentials to access the service endpoint from environment variables. Alternatively, edit the source code to include the appropriate credentials. See each individual sample for details on which environment variables/credentials it requires to function.

Adapting the samples to run in the browser may require some additional consideration. For details, please see the [package README][package].

## Setup

To run the samples using the published version of the package:

1. Install the dependencies using `npm`:

```bash
npm install
```

2. Compile the samples:

```bash
npm run build
```

3. Edit the file `sample.env`, adding the correct credentials to access the Azure service and run the samples. Then rename the file from `sample.env` to just `.env`. The sample programs will read this file automatically.

4. Run whichever samples you like (note that some samples may require additional setup, see the table above):

```bash
node dist/availableEnvironmentModesListSample.js
```

Alternatively, run a single sample with the required environment variables set (setting up the `.env` file is not required if you do this), for example (cross-platform):

```bash
node dist/availableEnvironmentModesListSample.js
```

## Next Steps

Take a look at our [API Documentation][apiref] for more information about the APIs that are available in the clients.

[availableenvironmentmodeslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/availableEnvironmentModesListSample.ts
[availableworkloadprofileslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/availableWorkloadProfilesListSample.ts
[billingmetersgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/billingMetersGetSample.ts
[certificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/certificatesCreateOrUpdateSample.ts
[certificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/certificatesDeleteSample.ts
[certificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/certificatesGetSample.ts
[certificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/certificatesListSample.ts
[certificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/certificatesUpdateSample.ts
[connectedenvironmentscertificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsCertificatesCreateOrUpdateSample.ts
[connectedenvironmentscertificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsCertificatesDeleteSample.ts
[connectedenvironmentscertificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsCertificatesGetSample.ts
[connectedenvironmentscertificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsCertificatesListSample.ts
[connectedenvironmentscertificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsCertificatesUpdateSample.ts
[connectedenvironmentschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsCheckNameAvailabilitySample.ts
[connectedenvironmentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsCreateOrUpdateSample.ts
[connectedenvironmentsdaprcomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsDaprComponentsCreateOrUpdateSample.ts
[connectedenvironmentsdaprcomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsDaprComponentsDeleteSample.ts
[connectedenvironmentsdaprcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsDaprComponentsGetSample.ts
[connectedenvironmentsdaprcomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsDaprComponentsListSample.ts
[connectedenvironmentsdaprcomponentslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsDaprComponentsListSecretsSample.ts
[connectedenvironmentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsDeleteSample.ts
[connectedenvironmentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsGetSample.ts
[connectedenvironmentslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsListByResourceGroupSample.ts
[connectedenvironmentslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsListBySubscriptionSample.ts
[connectedenvironmentsstoragescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsStoragesCreateOrUpdateSample.ts
[connectedenvironmentsstoragesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsStoragesDeleteSample.ts
[connectedenvironmentsstoragesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsStoragesGetSample.ts
[connectedenvironmentsstorageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsStoragesListSample.ts
[connectedenvironmentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/connectedEnvironmentsUpdateSample.ts
[containerappprivateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppPrivateEndpointConnectionsCreateOrUpdateSample.ts
[containerappprivateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppPrivateEndpointConnectionsDeleteSample.ts
[containerappprivateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppPrivateEndpointConnectionsGetSample.ts
[containerappprivateendpointconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppPrivateEndpointConnectionsListSample.ts
[containerappprivatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppPrivateLinkResourcesGetSample.ts
[containerappprivatelinkresourceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppPrivateLinkResourcesListSample.ts
[containerappsauthconfigscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsAuthConfigsCreateOrUpdateSample.ts
[containerappsauthconfigsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsAuthConfigsDeleteSample.ts
[containerappsauthconfigsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsAuthConfigsGetSample.ts
[containerappsauthconfigslistbycontainerappsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsAuthConfigsListByContainerAppSample.ts
[containerappscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsCreateOrUpdateSample.ts
[containerappsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsDeleteSample.ts
[containerappsdiagnosticsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsDiagnosticsGetDetectorSample.ts
[containerappsdiagnosticsgetrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsDiagnosticsGetRevisionSample.ts
[containerappsdiagnosticsgetrootsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsDiagnosticsGetRootSample.ts
[containerappsdiagnosticslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsDiagnosticsListDetectorsSample.ts
[containerappsdiagnosticslistrevisionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsDiagnosticsListRevisionsSample.ts
[containerappsfunctionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsFunctionsGetSample.ts
[containerappsfunctionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsFunctionsListSample.ts
[containerappsgetauthtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsGetAuthTokenSample.ts
[containerappsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsGetSample.ts
[containerappslabelhistorydeletelabelhistorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsLabelHistoryDeleteLabelHistorySample.ts
[containerappslabelhistorygetlabelhistorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsLabelHistoryGetLabelHistorySample.ts
[containerappslabelhistorylistlabelhistorysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsLabelHistoryListLabelHistorySample.ts
[containerappslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsListByResourceGroupSample.ts
[containerappslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsListBySubscriptionSample.ts
[containerappslistcustomhostnameanalysissample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsListCustomHostNameAnalysisSample.ts
[containerappslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsListSecretsSample.ts
[containerappsrevisionfunctionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsRevisionFunctionsGetSample.ts
[containerappsrevisionfunctionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsRevisionFunctionsListSample.ts
[containerappsrevisionreplicasgetreplicasample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsRevisionReplicasGetReplicaSample.ts
[containerappsrevisionreplicaslistreplicassample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsRevisionReplicasListReplicasSample.ts
[containerappsrevisionsactivaterevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsRevisionsActivateRevisionSample.ts
[containerappsrevisionsdeactivaterevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsRevisionsDeactivateRevisionSample.ts
[containerappsrevisionsgetrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsRevisionsGetRevisionSample.ts
[containerappsrevisionslistrevisionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsRevisionsListRevisionsSample.ts
[containerappsrevisionsrestartrevisionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsRevisionsRestartRevisionSample.ts
[containerappssessionpoolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsSessionPoolsCreateOrUpdateSample.ts
[containerappssessionpoolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsSessionPoolsDeleteSample.ts
[containerappssessionpoolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsSessionPoolsGetSample.ts
[containerappssessionpoolslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsSessionPoolsListByResourceGroupSample.ts
[containerappssessionpoolslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsSessionPoolsListBySubscriptionSample.ts
[containerappssessionpoolsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsSessionPoolsUpdateSample.ts
[containerappssourcecontrolscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsSourceControlsCreateOrUpdateSample.ts
[containerappssourcecontrolsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsSourceControlsDeleteSample.ts
[containerappssourcecontrolsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsSourceControlsGetSample.ts
[containerappssourcecontrolslistbycontainerappsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsSourceControlsListByContainerAppSample.ts
[containerappsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsStartSample.ts
[containerappsstopsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsStopSample.ts
[containerappsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/containerAppsUpdateSample.ts
[daprcomponentresiliencypoliciescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/daprComponentResiliencyPoliciesCreateOrUpdateSample.ts
[daprcomponentresiliencypoliciesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/daprComponentResiliencyPoliciesDeleteSample.ts
[daprcomponentresiliencypoliciesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/daprComponentResiliencyPoliciesGetSample.ts
[daprcomponentresiliencypolicieslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/daprComponentResiliencyPoliciesListSample.ts
[daprcomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/daprComponentsCreateOrUpdateSample.ts
[daprcomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/daprComponentsDeleteSample.ts
[daprcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/daprComponentsGetSample.ts
[daprcomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/daprComponentsListSample.ts
[daprcomponentslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/daprComponentsListSecretsSample.ts
[dotnetcomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/dotNetComponentsCreateOrUpdateSample.ts
[dotnetcomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/dotNetComponentsDeleteSample.ts
[dotnetcomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/dotNetComponentsGetSample.ts
[dotnetcomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/dotNetComponentsListSample.ts
[dotnetcomponentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/dotNetComponentsUpdateSample.ts
[functionsextensioninvokefunctionshostsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/functionsExtensionInvokeFunctionsHostSample.ts
[getcustomdomainverificationidsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/getCustomDomainVerificationIdSample.ts
[httprouteconfigcreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/httpRouteConfigCreateOrUpdateSample.ts
[httprouteconfigdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/httpRouteConfigDeleteSample.ts
[httprouteconfiggetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/httpRouteConfigGetSample.ts
[httprouteconfiglistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/httpRouteConfigListSample.ts
[httprouteconfigupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/httpRouteConfigUpdateSample.ts
[javacomponentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/javaComponentsCreateOrUpdateSample.ts
[javacomponentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/javaComponentsDeleteSample.ts
[javacomponentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/javaComponentsGetSample.ts
[javacomponentslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/javaComponentsListSample.ts
[javacomponentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/javaComponentsUpdateSample.ts
[jobexecutionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobExecutionSample.ts
[jobscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsCreateOrUpdateSample.ts
[jobsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsDeleteSample.ts
[jobsexecutionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsExecutionsListSample.ts
[jobsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsGetDetectorSample.ts
[jobsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsGetSample.ts
[jobslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsListByResourceGroupSample.ts
[jobslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsListBySubscriptionSample.ts
[jobslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsListDetectorsSample.ts
[jobslistsecretssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsListSecretsSample.ts
[jobsproxygetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsProxyGetSample.ts
[jobsresumesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsResumeSample.ts
[jobsstartsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsStartSample.ts
[jobsstopexecutionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsStopExecutionSample.ts
[jobsstopmultipleexecutionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsStopMultipleExecutionsSample.ts
[jobssuspendsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsSuspendSample.ts
[jobsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/jobsUpdateSample.ts
[logicappscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/logicAppsCreateOrUpdateSample.ts
[logicappsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/logicAppsDeleteSample.ts
[logicappsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/logicAppsGetSample.ts
[logicappsgetworkflowsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/logicAppsGetWorkflowSample.ts
[logicappslistworkflowsconnectionssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/logicAppsListWorkflowsConnectionsSample.ts
[logicappslistworkflowssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/logicAppsListWorkflowsSample.ts
[maintenanceconfigurationscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/maintenanceConfigurationsCreateOrUpdateSample.ts
[maintenanceconfigurationsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/maintenanceConfigurationsDeleteSample.ts
[maintenanceconfigurationsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/maintenanceConfigurationsGetSample.ts
[maintenanceconfigurationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/maintenanceConfigurationsListSample.ts
[managedcertificatescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedCertificatesCreateOrUpdateSample.ts
[managedcertificatesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedCertificatesDeleteSample.ts
[managedcertificatesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedCertificatesGetSample.ts
[managedcertificateslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedCertificatesListSample.ts
[managedcertificatesupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedCertificatesUpdateSample.ts
[managedenvironmentdiagnosticsgetdetectorsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentDiagnosticsGetDetectorSample.ts
[managedenvironmentdiagnosticslistdetectorssample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentDiagnosticsListDetectorsSample.ts
[managedenvironmentprivateendpointconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentPrivateEndpointConnectionsCreateOrUpdateSample.ts
[managedenvironmentprivateendpointconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentPrivateEndpointConnectionsDeleteSample.ts
[managedenvironmentprivateendpointconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentPrivateEndpointConnectionsGetSample.ts
[managedenvironmentprivateendpointconnectionslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentPrivateEndpointConnectionsListSample.ts
[managedenvironmentprivatelinkresourcesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentPrivateLinkResourcesGetSample.ts
[managedenvironmentprivatelinkresourceslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentPrivateLinkResourcesListSample.ts
[managedenvironmentusageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentUsagesListSample.ts
[managedenvironmentscheckmigrationeligibilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsCheckMigrationEligibilitySample.ts
[managedenvironmentscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsCreateOrUpdateSample.ts
[managedenvironmentsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsDeleteSample.ts
[managedenvironmentsdiagnosticsgetrootsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsDiagnosticsGetRootSample.ts
[managedenvironmentsgetauthtokensample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsGetAuthTokenSample.ts
[managedenvironmentsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsGetSample.ts
[managedenvironmentslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsListByResourceGroupSample.ts
[managedenvironmentslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsListBySubscriptionSample.ts
[managedenvironmentslistworkloadprofilestatessample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsListWorkloadProfileStatesSample.ts
[managedenvironmentsstoragescreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsStoragesCreateOrUpdateSample.ts
[managedenvironmentsstoragesdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsStoragesDeleteSample.ts
[managedenvironmentsstoragesgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsStoragesGetSample.ts
[managedenvironmentsstorageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsStoragesListSample.ts
[managedenvironmentsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/managedEnvironmentsUpdateSample.ts
[namespaceschecknameavailabilitysample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/namespacesCheckNameAvailabilitySample.ts
[operationslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/operationsListSample.ts
[sandboxgroupscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/sandboxGroupsCreateOrUpdateSample.ts
[sandboxgroupsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/sandboxGroupsDeleteSample.ts
[sandboxgroupsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/sandboxGroupsGetSample.ts
[sandboxgroupslistbyresourcegroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/sandboxGroupsListByResourceGroupSample.ts
[sandboxgroupslistbysubscriptionsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/sandboxGroupsListBySubscriptionSample.ts
[sandboxgroupsupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/sandboxGroupsUpdateSample.ts
[usageslistsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/usagesListSample.ts
[vnetconnectionscreateorupdatesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/vnetConnectionsCreateOrUpdateSample.ts
[vnetconnectionsdeletesample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/vnetConnectionsDeleteSample.ts
[vnetconnectionsgetsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/vnetConnectionsGetSample.ts
[vnetconnectionslistbysandboxgroupsample]: https://github.com/Azure/azure-sdk-for-js/blob/main/sdk/appcontainers/arm-appcontainers/samples/v4/typescript/src/vnetConnectionsListBySandboxGroupSample.ts
[apiref]: https://learn.microsoft.com/javascript/api/@azure/arm-appcontainers
[freesub]: https://azure.microsoft.com/free/
[package]: https://github.com/Azure/azure-sdk-for-js/tree/main/sdk/appcontainers/arm-appcontainers/README.md
[typescript]: https://www.typescriptlang.org/docs/home.html
